--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - docker build -t "${REPO_NAME}":"${REPO_TAG}" .
 
 script:
-  - docker image ls
+  - bash ci/make-test.sh
 
 branches:
   only:
